[tool.poetry]
name = "stackexchange_django"
version = "0.1.0"
description = ""
authors = ["Kostas Kokkoros"]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.0"
Django = "^4.2.0"
redis = "^5.0.0"
defusedxml = "*"
django-celery-results = "^2.5.0"
django-environ = "^0.11.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.0"
psycopg2 = "^2.9.9"
py7zr = "^0.20.0"
requests = "^2.31.0"
tqdm = "^4.66.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
coverage = "^7.4.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.0"
factory-boy = "^3.3.0"
pylint = "^3.0.0"
pylint-django = "^2.5.0"
safety = "^3.0.0"
Werkzeug = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
