[project]
name = "stackexchange-django"
version = "0.1.0"
description = "Stachexchange API implemented in Django"
authors = ["Kostas Kokkoros <mavroprovato@gmail.com>"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

dependencies = [
    "celery>=5.5.2",
    "defusedxml>=0.7.1",
    "django>=5.2",
    "django-celery-results>=2.6.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "psycopg2>=2.9.10",
    "py7zr>=0.22.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "coverage>=7.8.0",
    "django-debug-toolbar>=5.1.0",
    "django-extensions>=4.1",
    "factory-boy>=3.3.3",
    "pylint>=3.3.6",
    "pylint-django>=2.6.1",
    "safety>=3.4.0",
    "werkzeug>=3.1.3",
]
